--- a/package.json
+++ b/package.json
@@ -1,6 +1,17 @@
 {
+  "name": "planner",
+  "private": true,
+  "version": "1.0.0",
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
+  },
   "dependencies": {
     "@tailwindcss/cli": "^4.1.11",
+    "next": "^14.2.31",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "tailwindcss": "^4.1.11"
   }
 }
